fix overlow scrolling on mobile nav

--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -67,7 +67,6 @@
   // Allow scrolling if open nav is taller than screen
   .site-nav {
     overflow-y: auto;
-    -webkit-overflow-scrolling: touch;
   }
 
   // Mobile nav is open!
